  * Ensure root window properties get deleted when xfdesktop
    quits (bug 5154).
  * Reload the backdrop and icon view when 'xfdesktop --reload'
    is run (bug 5156).
  * Make default button in 'delete multiple' dialog consistent with
    default in 'delete single' dialog (bug 5140).
  * Reload the desktop when the first image is added to an image
    list (bug 5001).


Xfce 4.6.0
----------

  * Fix menu plugin crash when selecting custom menu file (bug 4879).
  * Only regen the monitor on changes to files we care about (bug 4979).


Xfce 4.6rc1 (Xfce 4.5.99.1):
----------------------------

  * Remove the menu editor (which was just a stub anyway).


Xfce 4.6beta3 (Xfce 4.5.93):
----------------------------

  * Avoid an infinite loop if all files in a backdrop list are invalid.


Xfce 4.6beta2 (Xfce 4.5.92):
----------------------------

  * Display 'Audio' and 'Video' categories in the multimedia submenu.
  * Fix multiple image selection in settings dialog file chooser (bug 4522).
  * Always use the XfceMenuElement interface for reading the display names 
    of menu items and menus. This ensures that items appear sorted in 
    alphabetic order.


Xfce 4.6beta1 (Xfce 4.5.91):
----------------------------

  * Bring back the "show icons in menu" preferences for the desktop
    menu and window list menu.
  * Add support for XDG user dirs for the Desktop and Templates
    directories.  Patch from Andrea Santilli <yawara@quipo.it> (bug 4365).
  * Fix xfdesktop/xfce menu crashing when installing new applications that
    install .desktop files and icons (bug 3615).
  * Fix occasional "double menu" after menu/icon files change on disk
    (bug 4342).
  * Implement "rubber banding" for the desktop icon view (bug 3245).
  * Honor the Hidden=, OnlyShowIn=, and NeverShowIn= keys in .desktop
    files in the desktop folder (bug 4022).
  * Fix window menu popping up even after last window icon was
    de-selected when using minimized app icons.