@@ -10,6 +10,8 @@ Xfce 4.6.1
     default in 'delete single' dialog (bug 5140).
   * Reload the desktop when the first image is added to an image
     list (bug 5001).
+  * Auto-select new images as they are added to the settings dialog's
+    image list (bug 5014).
 
 
 Xfce 4.6.0
